# smart_teacher

./: README.md
soul/: .env.example  .gitignore  README.md
soul/backend/: pyproject.toml  requirements.txt
soul/backend/app/: config.py  main.py
soul/backend/app/api/v1/: router.py
soul/backend/app/api/v1/endpoints/: chat.py  config.py  habits.py  health.py  stream.py  trainer.py
soul/backend/app/engine/: base_module.py  buddhi.py  manas.py  sanskaras.py  soul_engine.py  streaming_engine.py  synthesizer.py
soul/backend/app/engine/prompts/: buddhi.txt  combined.txt  manas.txt  sanskaras.txt  synthesizer.txt
soul/backend/app/models/: database.py  habit_model.py  learning_model.py  schemas.py
soul/backend/app/seed/: seed_data.py
soul/backend/app/services/: claude_client.py  habit_service.py  learning_service.py
soul/docs/: api.md  architecture.md  philosophy.md
soul/frontend/: package-lock.json  package.json
soul/frontend/src/: api-client.ts  cli.ts  config.ts  display.ts  index.ts  trainer-cli.ts  types.ts
soul/frontend/web/: index.html  package.json  tsconfig.json  vite.config.ts
soul/frontend/web/src/: soul-app.ts  types.ts
soul/frontend/web/src/api/: soul-client.ts
soul/frontend/web/src/components/: chat-message.ts  config-panel.ts  faculty-card.ts  habits-panel.ts  synthesis-panel.ts  trainer-panel.ts
